# jowi-generic

./: CMakeLists.txt  README.md  auto_compile.sh
examples/: include_key_vector.cc  key_vector.cc
include/: generic.hpp
src/: atomic.cc  dependency_injection.cc  fixed_string.cc  generic.cc  id_vector.cc  invoker.cc  is_formattable_error.cc  is_number.cc  is_whatable_error.cc  key_vector.cc  main.cc  prec_fp.cc  precise_floating_point.cc  sized_string.cc  staged_error.cc  static_precise_floating_point.cc  static_pref_cp.cc  static_string.cc  thread_guard.cc  unique_handle.cc  variant.cc
tests/: CMakeLists.txt  fixed_string.cc  key_vector.cc  precise_floating_point.cc  precise_fp.cc  static_precise_floating_point.cc  static_precise_fp.cc  static_string.cc  variant.cc
